{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 8,
  "lineage": "2b208950-30c3-c72e-6633-fedfb20e6b6b",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-14T04:27:26.173-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/playground-s-11-a53e6015/global/firewalls/app-cluster-bastion-ssh",
            "log_config": [],
            "name": "app-cluster-bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-a53e6015/global/networks/kubernetes-cluster",
            "priority": 1000,
            "project": "playground-s-11-a53e6015",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-a53e6015/global/firewalls/app-cluster-bastion-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/playground-s-11-a53e6015/global/networks/kubernetes-cluster",
            "mtu": 0,
            "name": "kubernetes-cluster",
            "project": "playground-s-11-a53e6015",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-a53e6015/global/networks/kubernetes-cluster"
          }
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/playground-s-11-a53e6015/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-a53e6015/global/networks/kubernetes-cluster",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/playground-s-11-a53e6015/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "playground-s-11-a53e6015",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-a53e6015/global/routes/egress-internet",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    }
  ]
}